--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "compile": "webpack",
+    "start": "webpack && node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
